# ck_esmobileflutter_official

./: pubspec.yaml  verify_16kb_support.ps1  verify_16kb_support.sh
android/: gradle.properties
android/app/: build.gradle.kts  google-services.json  proguard-rules.pro
android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
ios/Runner.xcodeproj/: project.pbxproj
lib/: firebase_options.dart  main.dart  push_notifications.dart
lib/api/: api.dart
lib/auth/: login.dart
lib/models/: attendance.dart  enrolled_stud.dart  enrollment_data.dart  enrollment_info.dart  event.dart  grades.dart  ledger.dart  ledger_v2.dart  login.dart  observedvalues.dart  onlinepayments.dart  payments.dart  schedule.dart  schedule_v2.dart  scholarship.dart  school_info.dart  semester.dart  smsbunker.dart  taphistory.dart  transactions.dart  user.dart  user_data.dart  year_sem.dart
lib/screens/: billing_information.dart  billing_information_v2.dart  class_schedule.dart  class_schedule_college.dart  class_schedule_seniorhigh.dart  class_schedule_v2.dart  clearance.dart  dashboard.dart  enrollment.dart  history.dart  home.dart  home2.dart  home3.dart  loading.dart  notifications.dart  payment.dart  payment1.dart  payment_form.dart  profile.dart  remedial_class.dart  report_card.dart  report_card_college.dart  report_card_seniorhigh.dart  reportcard.dart  scholarship_form.dart  scholarship_request.dart  school_calendar.dart  taphistory.dart  teacher_evaluation.dart
lib/widgets/: action_button.dart  attendance.dart  carousel_card.dart  (+7 more)
linux/: CMakeLists.txt
web/: index.html
(+10 files in other folders)
